--- a/App_LocalResources/AdvancedFind.aspx.fr.resx
+++ b/App_LocalResources/AdvancedFind.aspx.fr.resx
@@ -132,4 +132,10 @@
     <data name="PageResource1.Title" xml:space="preserve">
         <value>MetraNet</value>
     </data>
+  <data name="InvoiceSearch.Text" xml:space="preserve">
+    <value>[FR]Search by Invoice Number</value>
+  </data>
+  <data name="labelInvoiceNumber.Text" xml:space="preserve">
+    <value>[FR]Invoice Number:</value>
+  </data>
 </root>
