--- a/MetraOffer/ProductOfferings/App_LocalResources/CreateProductOffering.aspx.fr.resx
+++ b/MetraOffer/ProductOfferings/App_LocalResources/CreateProductOffering.aspx.fr.resx
@@ -120,4 +120,25 @@
   <data name="MTTitle1.Text" xml:space="preserve">
     <value>Créer l'offre produit</value>
   </data>
+  <data name="TEXT_CURRENCY" xml:space="preserve">
+    <value>[FR]Currency</value>
+  </data>
+  <data name="TEXT_DESCRIPTION" xml:space="preserve">
+    <value>[FR]Description</value>
+  </data>
+  <data name="TEXT_DISPLAY_NAME" xml:space="preserve">
+    <value>[FR]Display name</value>
+  </data>
+  <data name="TEXT_EFFECTIVE_START_DATE" xml:space="preserve">
+    <value>[FR]Effective Start Date</value>
+  </data>
+  <data name="TEXT_NAME" xml:space="preserve">
+    <value>[FR]Name</value>
+  </data>
+  <data name="TEXT_PAGE_TITLE" xml:space="preserve">
+    <value>[FR]Add Product Offering</value>
+  </data>
+  <data name="TEXT_PARTITION_ID" xml:space="preserve">
+    <value>[FR]Partition Id</value>
+  </data>
 </root>
