--- a/App_GlobalResources/MainMenu.de.resx
+++ b/App_GlobalResources/MainMenu.de.resx
@@ -165,6 +165,9 @@
   <data name="TEXT_ALL_INTERVALS" xml:space="preserve">
     <value>Alle Intervalle</value>
   </data>
+  <data name="TEXT_ANALYTICS" xml:space="preserve">
+    <value>[de]Analytics</value>
+  </data>
   <data name="TEXT_APP_AUDIT_LOG" xml:space="preserve">
     <value>Anwendungs-Audit-Protokoll</value>
   </data>
