--- a/App_GlobalResources/MainMenu.es.resx
+++ b/App_GlobalResources/MainMenu.es.resx
@@ -165,6 +165,9 @@
   <data name="TEXT_ALL_INTERVALS" xml:space="preserve">
     <value>Todos los intervalos</value>
   </data>
+  <data name="TEXT_ANALYTICS" xml:space="preserve">
+    <value>[es]Analytics</value>
+  </data>	
   <data name="TEXT_APP_AUDIT_LOG" xml:space="preserve">
     <value>Registro de auditoría de la aplicación</value>
   </data>
