--- a/App_GlobalResources/MainMenu.fr.resx
+++ b/App_GlobalResources/MainMenu.fr.resx
@@ -165,6 +165,9 @@
   <data name="TEXT_ALL_INTERVALS" xml:space="preserve">
     <value>Tous les intervalles</value>
   </data>
+  <data name="TEXT_ANALYTICS" xml:space="preserve">
+    <value>[fr]Analytics</value>
+  </data>	
   <data name="TEXT_APP_AUDIT_LOG" xml:space="preserve">
     <value>Journal d’audit de l’application</value>
   </data>
