--- a/App_GlobalResources/MainMenu.it.resx
+++ b/App_GlobalResources/MainMenu.it.resx
@@ -165,6 +165,9 @@
   <data name="TEXT_ALL_INTERVALS" xml:space="preserve">
     <value>Tutti gli intervalli</value>
   </data>
+  <data name="TEXT_ANALYTICS" xml:space="preserve">
+    <value>[IT]Analytics</value>
+  </data>
   <data name="TEXT_APP_AUDIT_LOG" xml:space="preserve">
     <value>Registro verifiche applicazione</value>
   </data>
