--- a/App_GlobalResources/MainMenu.ja.resx
+++ b/App_GlobalResources/MainMenu.ja.resx
@@ -165,6 +165,9 @@
   <data name="TEXT_ALL_INTERVALS" xml:space="preserve">
     <value>すべての期間</value>
   </data>
+  <data name="TEXT_ANALYTICS" xml:space="preserve">
+    <value>[ja]Analytics</value>
+  </data>
   <data name="TEXT_APP_AUDIT_LOG" xml:space="preserve">
     <value>アプリケーション監査ログ</value>
   </data>
