--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.de.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.de.resx
@@ -291,4 +291,7 @@
   <data name="TEXT_SECONDS_WAITING_TO_BE_ASSIGNED" xml:space="preserve">
     <value>{DE}seconds waiting to be assigned</value>
   </data>
+  <data name="TEXT_DAYS_BACK" xml:space="preserve">
+    <value>{DE}days back</value>
+  </data>
 </root>
