resolve conflict between CORE-7366 and CORE-7864

--- a/App_GlobalResources/MainMenu.en-GB.resx
+++ b/App_GlobalResources/MainMenu.en-GB.resx
@@ -180,6 +180,9 @@
     <data name="TEXT_ALL_INTERVALS" xml:space="preserve">
         <value>All Intervals</value>
     </data>
+	  <data name="TEXT_ANALYTICS" xml:space="preserve">
+    <value>Analytics</value>
+	</data>
     <data name="TEXT_APP_AUDIT_LOG" xml:space="preserve">
         <value>Application Audit Log</value>
     </data>
@@ -642,22 +645,4 @@
     <data name="TEXT_VIEWONLINE_BILL" xml:space="preserve">
         <value>View Online Bill</value>
     </data>
-  <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
-    <value>Bill Messages</value>
-  </data>
-  <data name="TEXT_FINANCE_DASHBOARD" xml:space="preserve">
-    <value>Finance Dashboard</value>
-  </data>
-  <data name="TEXT_MANAGE_BILL_MESSAGES" xml:space="preserve">
-    <value>Manage Bill Messages</value>
-  </data>
-  <data name="TEXT_OPERATIONS_DASHBOARD" xml:space="preserve">
-    <value>Operations Dashboard</value>
-  </data>
-  <data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
-    <value>Product Dashboard</value>
-  </data>
-  <data name="TEXT_REPORTS" xml:space="preserve">
-    <value>Reports</value>
-  </data>  
 </root>
