CORE-7875:"[Bling] Localization for Operations Dashboard: Usage Data Records" Localize hardcoded date-time format

--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.es-MX.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.es-MX.resx
@@ -294,4 +294,7 @@
   <data name="TEXT_DAYS_BACK" xml:space="preserve">
     <value>{ES-MX}days back</value>
   </data>
+  <data name="DATE_FORMAT_JS" xml:space="preserve">
+    <value>%d/%m/%Y %X</value>
+  </data>
 </root>
