--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.resx
@@ -294,4 +294,7 @@
   <data name="TEXT_DAYS_BACK" xml:space="preserve">
     <value>days back</value>
   </data>
+  <data name="DATE_FORMAT_JS" xml:space="preserve">
+    <value>%m/%d/%Y %I:%M:%S %p</value>
+  </data>
 </root>
