--- a/config/Localization/metratech.com/metratech.com_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_fr.xml
@@ -196,27 +196,27 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/QuoteStatus/Actualized</Name>
-            <Value>metratech.com/QuoteStatus/Actualized</Value>
+            <Value>[FR]Actualized</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/QuoteStatus/Complete</Name>
-            <Value>metratech.com/QuoteStatus/Complete</Value>
+            <Value>[FR]Complete</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/QuoteStatus/Converted</Name>
-            <Value>metratech.com/QuoteStatus/Actualized</Value>
+            <Value>[FR]Actualized</Value>
         </locale_entry>
         <locale_entry>
-            <Name>metratech.com/QuoteStatus/Failed</Name>
+            <Name>[FR]Failed</Name>
             <Value>metratech.com/QuoteStatus/Failed</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/QuoteStatus/InProgress</Name>
-            <Value>metratech.com/QuoteStatus/InProgress</Value>
+            <Value>[FR]InProgress</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/QuoteStatus/None</Name>
-            <Value>metratech.com/QuoteStatus/None</Value>
+            <Value>[FR]None</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/SaleForceRelationship/Account Development</Name>
