CORE-7731 New pages under 'Product Catalog' section should be localized Reviewer YZapara
Conflicts:
	Source/MetraTech/UI/MetraNet/App_GlobalResources/MainMenu.fr.resx

--- a/App_GlobalResources/MainMenu.fr.resx
+++ b/App_GlobalResources/MainMenu.fr.resx
@@ -141,6 +141,9 @@
   <data name="TEXT_ADD_ACCOUNT_WEBSERVICE" xml:space="preserve">
     <value>Ajouter un compte avec service Web</value>
   </data>
+    <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
+        <value>[FR]Add child Account</value>
+    </data>
   <data name="TEXT_ADD_CSR" xml:space="preserve">
     <value>Ajouter un conseiller du service à la clientèle</value>
   </data>
@@ -183,6 +186,12 @@
   <data name="TEXT_APP_AUDIT_LOG" xml:space="preserve">
     <value>Journal d’audit de l’application</value>
   </data>
+    <data name="TEXT_APPROVAL_FRAMEWORK_MANAGEMENT" xml:space="preserve">
+        <value>[FR]Approvals</value>
+    </data>
+    <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
+        <value>Assigner des messages aux factures</value>
+    </data>
   <data name="TEXT_ASSIGN_UPDATE_REPORT_PARAMETERS" xml:space="preserve">
     <value>Affecter les paramètres de rapport</value>
   </data>
@@ -265,8 +274,8 @@
     <value>Créer une annulation/réexécution</value>
   </data>
   <data name="TEXT_CREATE_CREDIT_NOTE" xml:space="preserve">
-    <value>{FR}Create Credit Note</value>
-  </data>
+        <value>{FR}Create Credit Note</value>
+    </data>
   <data name="TEXT_CREATE_NEW_REPORT_INSTANCE" xml:space="preserve">
     <value>Ajouter une nouvelle instance de rapport</value>
   </data>
@@ -322,7 +331,7 @@
     <value>Résumé par phase et plug-in</value>
   </data>
   <data name="TEXT_FEEDS" xml:space="preserve">
-    <value>Feeds</value>
+    <value>[FR]Feeds</value>
   </data>
   <data name="TEXT_FILE_MANAGEMENT" xml:space="preserve">
     <value>Gestion des fichiers</value>
@@ -369,6 +378,12 @@
   <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
     <value>[FR]Manage AMP Decision Types</value>
   </data>
+    <data name="TEXT_MANAGE_BILLSOFT_EXEMPTIONS" xml:space="preserve">
+        <value>Gérer BillSoft Exonérations</value>
+    </data>
+    <data name="TEXT_MANAGE_BILLSOFT_OVERRIDES" xml:space="preserve">
+        <value>Gérer BillSoft Remplacements</value>
+    </data>
   <data name="TEXT_MANAGE_CALENDARS" xml:space="preserve">
     <value>Gérer les calendriers</value>
   </data>
@@ -396,8 +411,9 @@
   <data name="TEXT_MANAGE_SECURITY" xml:space="preserve">
     <value>Gérer la sécurité</value>
   </data>
-  <data name="TEXT_MANAGE_BILLSOFT_EXEMPTIONS" xml:space="preserve">
-    <value>Gérer BillSoft Exonérations</value>
+  </data>
+  <data name="TEXT_MASTER_OFFERINGS" xml:space="preserve">
+    <value>[FR]Master Product Offerings</value>
   </data>
   <data name="TEXT_MANAGE_BILLSOFT_OVERRIDES" xml:space="preserve">
     <value>Gérer BillSoft Remplacements</value>
@@ -549,6 +565,9 @@
   <data name="TEXT_SHOW_A_REPORT_INSTANCE_DETAILS" xml:space="preserve">
     <value>Afficher les détails de l’instance de rapport</value>
   </data>
+    <data name="TEXT_SHOW_ALL_CHANGES_SUMMARY" xml:space="preserve">
+        <value>Afficher toutes les modifications</value>
+    </data>
   <data name="TEXT_SHOW_ALL_REPORT_PARAMETERS" xml:space="preserve">
     <value>Afficher tous les paramètres de rapport</value>
   </data>
@@ -558,6 +577,15 @@
   <data name="TEXT_SHOW_DATAEXPORT_QUEUE_DASHBOARD" xml:space="preserve">
     <value>File d’attente d’exportation des données</value>
   </data>
+    <data name="TEXT_SHOW_FAILED_CHANGES_SUMMARY" xml:space="preserve">
+        <value>Afficher les modifications erronées</value>
+    </data>
+    <data name="TEXT_SHOW_ITEM_HISTORY" xml:space="preserve">
+        <value>Afficher les détails historiques</value>
+    </data>
+    <data name="TEXT_SHOW_PENDING_CHANGES_SUMMARY" xml:space="preserve">
+        <value>Afficher les modifications en attente</value>
+    </data>
   <data name="TEXT_SUBSCRIBER_LOG_ADD" xml:space="preserve">
     <value>Ajouter une entrée du journal</value>
   </data>
@@ -616,34 +644,13 @@
     <value>Informations sur la version</value>
   </data>
   <data name="TEXT_VIEW_CREDIT_NOTES_ISSUED" xml:space="preserve">
-    <value>{FR}View Credit Notes Issued</value>
-  </data>
+        <value>{FR}View Credit Notes Issued</value>
+    </data>
   <data name="TEXT_VIEW_METERING_STATISTICS" xml:space="preserve">
     <value>Afficher</value>
   </data>
   <data name="TEXT_VIEWONLINE_BILL" xml:space="preserve">
     <value>Afficher la facture en ligne</value>
-  </data>
-  <data name="TEXT_APPROVAL_FRAMEWORK_MANAGEMENT" xml:space="preserve">
-    <value>Approvals</value>
-  </data>
-  <data name="TEXT_SHOW_ITEM_HISTORY" xml:space="preserve">
-    <value>Afficher les détails historiques</value>
-  </data>
-  <data name="TEXT_SHOW_ALL_CHANGES_SUMMARY" xml:space="preserve">
-    <value>Afficher toutes les modifications</value>
-  </data>
-  <data name="TEXT_SHOW_PENDING_CHANGES_SUMMARY" xml:space="preserve">
-    <value>Afficher les modifications en attente</value>
-  </data>
-  <data name="TEXT_SHOW_FAILED_CHANGES_SUMMARY" xml:space="preserve">
-    <value>Afficher les modifications erronées</value>
-  </data>
-  <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
-    <value>Assigner des messages aux factures</value>
-  </data>
-  <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
-    <value>[Fr]Add child Account</value>
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
     <value>[fr]Bill Messages</value>
