--- a/App_GlobalResources/Resource.fr.resx
+++ b/App_GlobalResources/Resource.fr.resx
@@ -156,9 +156,6 @@
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>Ajouter</value>
   </data>
-  <data name="TEXT_ADD_RELATED_ENTITIES" xml:space="preserve">
-    <value>Ajouter des entités connexes à </value>
-  </data>
   <data name="TEXT_AFTER" xml:space="preserve">
     <value>après</value>
   </data>
@@ -180,26 +177,8 @@
   <data name="TEXT_APPLY_CHANGES" xml:space="preserve">
     <value>Appliquer les modifications</value>
   </data>
-  <data name="TEXT_APPROVAL_BUTTON_APPROVE" xml:space="preserve">
-    <value>Approve</value>
-  </data>
-  <data name="TEXT_APPROVAL_BUTTON_DENY" xml:space="preserve">
-    <value>Deny</value>
-  </data>
-  <data name="TEXT_APPROVAL_BUTTON_DISMISS" xml:space="preserve">
-    <value>Dismiss</value>
-  </data>
-  <data name="TEXT_APPROVAL_BUTTON_RESUBMIT" xml:space="preserve">
-    <value>Resubmit</value>
-  </data>
-  <data name="TEXT_ARE_YOU_SURE" xml:space="preserve">
-    <value>Êtes-vous sûr ?</value>
-  </data>
   <data name="TEXT_AUTO" xml:space="preserve">
     <value>Auto</value>
-  </data>
-  <data name="TEXT_AVAILABLE_SHARED_PROPERTIES" xml:space="preserve">
-    <value>Propriétés partagées disponibles</value>
   </data>
   <data name="TEXT_BACK_DASHBOARD" xml:space="preserve">
     <value>Retour au tableau de bord</value>
@@ -234,9 +213,6 @@
   <data name="TEXT_CONFIRMATION" xml:space="preserve">
     <value>Confirmation</value>
   </data>
-  <data name="TEXT_CORRECT_ERRORS" xml:space="preserve">
-    <value>Corrigez les erreurs et réessayez.</value>
-  </data>
   <data name="TEXT_CREATOR_ID" xml:space="preserve">
     <value>ID de créateur</value>
   </data>
@@ -254,6 +230,9 @@
   </data>
   <data name="TEXT_DELETE" xml:space="preserve">
     <value>Supprimer</value>
+  </data>
+  <data name="TEXT_BULKUPDATE" xml:space="preserve">
+    <value>[FR]Bulk Update</value>
   </data>
   <data name="TEXT_DESCRIPTION" xml:space="preserve">
     <value>Description</value>
@@ -333,11 +312,20 @@
   <data name="TEXT_MANAGE_GRPSUB" xml:space="preserve">
     <value>Gérer les abonnements groupés</value>
   </data>
-  <data name="TEXT_MISSING_LOCALIZATION" xml:space="preserve">
-    <value>Localisation manquante</value>
-  </data>
   <data name="TEXT_MORE_ITEMS" xml:space="preserve">
     <value>Autres éléments…</value>
+  </data>
+  <data name="TEXT_QUOTE_DETAILS" xml:space="preserve">
+    <value>[FR]Quote details</value>
+  </data>
+  <data name="ACCOUNT_FOR_QUOTES" xml:space="preserve">
+    <value>[FR]Accounts</value>
+  </data>
+  <data name="PO_FOR_QUOTES" xml:space="preserve">
+    <value>[FR]Product offerings</value>
+  </data>
+  <data name="LOG_FOR_QUOTES" xml:space="preserve">
+    <value>[FR]Quote log</value>
   </data>
   <data name="TEXT_NAME" xml:space="preserve">
     <value>Nom</value>
@@ -345,20 +333,11 @@
   <data name="TEXT_NEW" xml:space="preserve">
     <value>Nouveau </value>
   </data>
-  <data name="TEXT_NO_PROPERTIES_YET" xml:space="preserve">
-    <value>Pour l’instant, aucune propriété n’est définie...</value>
-  </data>
   <data name="TEXT_NO_RECORDS_FOUND" xml:space="preserve">
     <value>Aucun enregistrement trouvé</value>
   </data>
   <data name="TEXT_OK" xml:space="preserve">
     <value>OK</value>
-  </data>
-  <data name="TEXT_OK_DELETE_1" xml:space="preserve">
-    <value>Cliquez sur OK pour supprimer la</value>
-  </data>
-  <data name="TEXT_OK_DELETE_2" xml:space="preserve">
-    <value>propriété.</value>
   </data>
   <data name="TEXT_PAGE_ERROR" xml:space="preserve">
     <value>Impossible d’afficher la page.</value>
@@ -377,9 +356,6 @@
   </data>
   <data name="TEXT_PROPERTIES" xml:space="preserve">
     <value>Propriétés</value>
-  </data>
-  <data name="TEXT_PROPERTY" xml:space="preserve">
-    <value>Propriété</value>
   </data>
   <data name="TEXT_REASSIGN_MESSAGE" xml:space="preserve">
     <value>Sélectionnez le compte qui doit recevoir les ordres transférés.</value>
@@ -408,9 +384,6 @@
   <data name="TEXT_REPORT_TYPE" xml:space="preserve">
     <value>Type du rapport</value>
   </data>
-  <data name="TEXT_RESTRICTIONS" xml:space="preserve">
-    <value>Restrictions</value>
-  </data>
   <data name="TEXT_SAVE" xml:space="preserve">
     <value>Enregistrer</value>
   </data>
@@ -419,9 +392,6 @@
   </data>
   <data name="TEXT_SESSION_ID" xml:space="preserve">
     <value>ID de la session</value>
-  </data>
-  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
-    <value>Propriétés partagées</value>
   </data>
   <data name="TEXT_SHOW_SECOND_PASS_DATA" xml:space="preserve">
     <value>Afficher les données de la deuxième transmission</value>
@@ -456,15 +426,6 @@
   <data name="TEXT_TITLE" xml:space="preserve">
     <value>MetraNet</value>
   </data>
-  <data name="TEXT_TITLE_ADD_CATEGORY" xml:space="preserve">
-    <value>Créer une catégorie</value>
-  </data>
-  <data name="TEXT_TITLE_ADD_PROPERTY" xml:space="preserve">
-    <value>Ajouter une propriété</value>
-  </data>
-  <data name="TEXT_TITLE_EDIT_PROPERTY" xml:space="preserve">
-    <value>Modifier une propriété</value>
-  </data>
   <data name="TEXT_TITLE_METRACONTROL" xml:space="preserve">
     <value>MetraControl</value>
   </data>
@@ -473,12 +434,6 @@
   </data>
   <data name="TEXT_UNRELATED_2" xml:space="preserve">
     <value>(s)</value>
-  </data>
-  <data name="TEXT_UNRELATED_ENTITY_1" xml:space="preserve">
-    <value>Liste des instances</value>
-  </data>
-  <data name="TEXT_UNRELATED_ENTITY_2" xml:space="preserve">
-    <value>de l’entité non liés</value>
   </data>
   <data name="TEXT_URL" xml:space="preserve">
     <value>URL</value>
@@ -489,9 +444,6 @@
   <data name="TEXT_VALUE" xml:space="preserve">
     <value>Valeur</value>
   </data>
-  <data name="TEXT_WAITING_FOR_UPDATE" xml:space="preserve">
-    <value>Attente de mise à jour...</value>
-  </data>
   <data name="TEXT_WIDGET_PATH" xml:space="preserve">
     <value>Chemin du widget</value>
   </data>
@@ -501,8 +453,26 @@
   <data name="TEXT_WIDTH" xml:space="preserve">
     <value>Largeur</value>
   </data>
-  <data name="TEXT_BULKUPDATE" xml:space="preserve">
-    <value>[FR]Bulk Update</value>
+  <data name="TEXT_ADD_RELATED_ENTITIES" xml:space="preserve">
+    <value>Ajouter des entités connexes à </value>
+  </data>
+  <data name="TEXT_UNRELATED_ENTITY_1" xml:space="preserve">
+    <value>Liste des instances</value>
+  </data>
+  <data name="TEXT_UNRELATED_ENTITY_2" xml:space="preserve">
+    <value>de l’entité non liés</value>
+  </data>
+  <data name="TEXT_APPROVAL_BUTTON_APPROVE" xml:space="preserve">
+    <value>Approve</value>
+  </data>
+  <data name="TEXT_APPROVAL_BUTTON_DENY" xml:space="preserve">
+    <value>[FR]Deny</value>
+  </data>
+  <data name="TEXT_APPROVAL_BUTTON_DISMISS" xml:space="preserve">
+    <value>[FR]Dismiss</value>
+  </data>
+  <data name="TEXT_APPROVAL_BUTTON_RESUBMIT" xml:space="preserve">
+    <value>[FR]Resubmit</value>
   </data>
   <data name="SpecCharacteristicsController_Index_Product_Offering_Properties" xml:space="preserve">
     <value>[FR]Product Offering Properties</value>
@@ -522,8 +492,44 @@
   <data name="TEXT_ACTION_EDIT" xml:space="preserve">
     <value>[FR]edit</value>
   </data>
+  <data name="TEXT_ARE_YOU_SURE" xml:space="preserve">
+    <value>Êtes-vous sûr ?</value>
+  </data>
+  <data name="TEXT_CORRECT_ERRORS" xml:space="preserve">
+    <value>Corrigez les erreurs et réessayez.</value>
+  </data>
+  <data name="TEXT_MISSING_LOCALIZATION" xml:space="preserve">
+    <value>Localisation manquante</value>
+  </data>
+  <data name="TEXT_NO_PROPERTIES_YET" xml:space="preserve">
+    <value>Pour l’instant, aucune propriété n’est définie...</value>
+  </data>
+  <data name="TEXT_OK_DELETE_1" xml:space="preserve">
+    <value>Cliquez sur OK pour supprimer la</value>
+  </data>
+  <data name="TEXT_OK_DELETE_2" xml:space="preserve">
+    <value>propriété.</value>
+  </data>
+  <data name="TEXT_RESTRICTIONS" xml:space="preserve">
+    <value>[FR]Restrictions</value>
+  </data>
+  <data name="TEXT_TITLE_ADD_CATEGORY" xml:space="preserve">
+    <value>Créer une catégorie</value>
+  </data>
+  <data name="TEXT_TITLE_ADD_PROPERTY" xml:space="preserve">
+    <value>Ajouter une propriété</value>
+  </data>
+  <data name="TEXT_TITLE_EDIT_PROPERTY" xml:space="preserve">
+    <value>Modifier une propriété</value>
+  </data>
+  <data name="TEXT_WAITING_FOR_UPDATE" xml:space="preserve">
+    <value>Attente de mise à jour...</value>
+  </data>
   <data name="TEXT_ACTION_ADD_EXISTING_PROPERTY" xml:space="preserve">
     <value>[FR]add existing property</value>
+  </data>
+  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+    <value>Propriétés partagées</value>
   </data>
   <data name="SpecCharacteristicsController_SetDisplayOrder_Successfully_moved_" xml:space="preserve">
     <value>[FR]Successfully moved.</value>
@@ -533,6 +539,12 @@
   </data>
   <data name="SpecCharacteristicsController_AddSharedProperty_Successfully_added_property_" xml:space="preserve">
     <value>[FR]Successfully added property.</value>
+  </data>
+  <data name="TEXT_AVAILABLE_SHARED_PROPERTIES" xml:space="preserve">
+    <value>Propriétés partagées disponibles</value>
+  </data>
+  <data name="TEXT_PROPERTY" xml:space="preserve">
+    <value>Propriété</value>
   </data>
   <data name="TEXT_BACK" xml:space="preserve">
     <value>[FR]Previous</value>
@@ -582,6 +594,9 @@
   <data name="_PropertyForm_cshtml_Set_Localization_Title" xml:space="preserve">
     <value>[FR]Set Localization</value>
   </data>
+  <data name="TEXT_BUTTON_ADD" xml:space="preserve">
+    <value>[FR]Add</value>
+  </data>
   <data name="TEXT_BUTTON_DELETE" xml:space="preserve">
     <value>[FR]Delete</value>
   </data>
@@ -593,17 +608,5 @@
   </data>
   <data name="updateSubscription" xml:space="preserve">
     <value>[FR]Subscription Update</value>
-  </data>
-  <data name="TEXT_QUOTE_DETAILS" xml:space="preserve">
-    <value>[FR]More Items...</value>
-  </data>
-  <data name="ACCOUNT_FOR_QUOTES" xml:space="preserve">
-    <value>[FR]More Items...</value>
-  </data>
-  <data name="PO_FOR_QUOTES" xml:space="preserve">
-    <value>[FR]More Items...</value>
-  </data>
-  <data name="LOG_FOR_QUOTES" xml:space="preserve">
-    <value>[FR]Quote log</value>
   </data>
 </root>
