--- a/Quoting/App_LocalResources/QuoteList.aspx.resx
+++ b/Quoting/App_LocalResources/QuoteList.aspx.resx
@@ -177,4 +177,7 @@
     <data name="TOTAL_TAX" xml:space="preserve">
         <value>Total Tax</value>
     </data>
+	<data name="TEXT_ACTIONS" xml:space="preserve">
+		<value>Actions</value>
+	</data>
 </root>
