--- a/App_GlobalResources/MainMenu.pt-br.resx
+++ b/App_GlobalResources/MainMenu.pt-br.resx
@@ -372,6 +372,9 @@
   <data name="TEXT_MANAGE_SECURITY" xml:space="preserve">
     <value>Gerenciar segurança</value>
   </data>
+  <data name="TEXT_MASTER_OFFERINGS" xml:space="preserve">
+    <value>{PT-BR}Master Product Offerings</value>
+  </data>
   <data name="TEXT_MENU_GENERATE_PASSWORD" xml:space="preserve">
     <value>Gerar senha</value>
   </data>
@@ -556,7 +559,7 @@
     <value>Atualizar definição de relatório existente</value>
   </data>
   <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
-    <value>Usage Audit</value>
+    <value>{PT-BR}Usage Audit</value>
   </data>
   <data name="TEXT_USM" xml:space="preserve">
     <value>Manutenção do servidor de utilização</value>
@@ -624,4 +627,13 @@
   <data name="TEXT_REPORTS" xml:space="preserve">
     <value>[pt-br] Reports</value>
   </data>
+  <data name="TEXT_USAGE_PROCESSING" xml:space="preserve">
+    <value>{PT-BR}Usage Processing</value>
+  </data>
+  <data name="TEXT_ADD_PARTITION" xml:space="preserve">
+    <value>{PT-BR}Add Partition</value>
+  </data>
+  <data name="TEXT_QUOTING" xml:space="preserve">
+    <value>{PT-BR}Manage Quotes</value>
+  </data>   
 </root>
